<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.CardToCardTransfer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainBackgroundColor">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_purchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="16dp"
            android:text="@string/purchased"
            android:textColor="@color/colorMainGreen"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_buy_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/card_to_card"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_purchased" />

        <TextView
            android:id="@+id/tv_introduce_inkam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/introduce_inkam"
            android:textColor="@color/colorBrown"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_buy_charge" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_introduce_inkam">

            <EditText
                android:id="@+id/et_enter_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:drawableEnd="@drawable/ic_money_gray"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:drawablePadding="16dp"
                android:hint="@string/enter_amount"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/origin_card"
                android:textColor="@color/colorBrown"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_own_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:background="@drawable/edit_text_selector"
                android:drawableEnd="@drawable/ic_card_add_gray"
                android:drawablePadding="16dp"
                android:hint="@string/choose_card"
                android:padding="16dp" />

            <EditText
                android:id="@+id/et_destination_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:drawableEnd="@drawable/ic_card_add_gray"
                android:drawablePadding="16dp"
                android:hint="@string/enter_card_destination"
                android:padding="16dp" />

            <EditText
                android:id="@+id/et_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:background="@drawable/edit_text_selector"
                android:drawableEnd="@drawable/ic_text"
                android:drawablePadding="16dp"
                android:hint="@string/explanation"
                android:padding="16dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layoutDirection="rtl"
                android:padding="8dp"
                android:switchPadding="16dp"
                android:text="@string/submit_in_repetitive_transactions"
                android:textColor="@color/colorBrown"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_next_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_background_disabled"
                android:padding="16dp"
                android:text="@string/next_step"
                android:textColor="@color/colorNightRider"
                android:textSize="16sp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>